# suibian

./: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  TRADE.md  UsingNautilus.md  configure_enclave.sh  expose_enclave.sh  package-lock.json  register_enclave.sh
.github/workflows/: rust.yml
avs/avs_on_chain/: Move.toml  README.md  interact_output.md  interact_output.sh  interact_response.txt
backend/: .gitignore
backend/dex/: Move.toml  README.md
backend/mock_tee_dapp/: Move.toml
backend/offchain_service/: index.ts  package-lock.json  package.json
backend/seal_policy/: Move.toml
backend/suibian_marketplace/: Move.toml  README.md
dex/scripts/: package-lock.json  package.json
frontend/: .gitignore  FIREBASE_SETUP.md  NAMING_CONVENTIONS.md  package.json  tailwind.config.js  vercel.json
frontend/api/: authApi.ts  marketplaceApi.ts  nonceApi.ts  seal-policy-client.ts
frontend/components/: AgentCard.tsx  CallToAction.tsx  ClientOnly.tsx  DualFeatureSection.tsx  EaseOfUseSection.tsx  FeatureCards.tsx  FirebaseTest.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorksSection.tsx  Layout.tsx  LoadingScreen.tsx  MarketplacePreviewSection.tsx  NavBar.tsx  Process.tsx  ReviewsCarousel.tsx  SuccessModal.tsx
frontend/context/: AppContext.tsx
frontend/data/: agents.ts
frontend/hooks/: useClientSide.ts  useSuiTransactions.ts  useTradingAgents.ts
frontend/lib/: firebaseSetup.ts
frontend/pages/: _app.tsx  browse-agent.tsx  browse-agents.tsx  create.tsx  dashboard.tsx  index_new.tsx  landing.tsx  login.tsx  marketplace.tsx  settings.tsx  test.tsx
nautilus-trading-agent/: .gitignore  Containerfile  Makefile  README.md  TRADE.md  configure_enclave.sh  expose_enclave.sh
src/nautilus-server/: Cargo.toml  run.sh
src/nautilus-server/src/: common.rs  lib.rs  main.rs
src/nautilus-server/src/examples/seal_example/: README.md  endpoints.rs  mod.rs  seal_config.yaml  types.rs
src/nautilus-server/src/examples/trading/: allowed_endpoints.yaml  mod.rs
src/nautilus-server/src/examples/twitter/: mod.rs
src/nautilus-server/src/examples/weather/: mod.rs
(+47 files in other folders)
