[package]
name = "nautilus-server"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/nautilus"

[[bin]]
name = "seal-cli"
path = "src/bin/seal_cli.rs"
required-features = ["seal-example"]

[workspace]

[dependencies]
serde_json = "1.0.140"
serde_bytes = "0.11"
serde = "1.0"
serde_repr = "0.1"

tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
axum = { version = "0.7", features = ["macros"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_yaml = "0.9.34"
tower-http = { version = "0.6.0", features = ["cors"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", features = ["aes"] }
chrono = "=0.4.39"
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api", optional = false }
bcs = "0.1.6"
lazy_static = "1.4"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "42ba6c0", optional = true }
sui-types = { git = "https://github.com/MystenLabs/sui", rev = "42ba6c0", optional = true }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", rev = "42ba6c0", optional = true }
shared_crypto = { git = "https://github.com/MystenLabs/sui", rev = "42ba6c0", package = "shared-crypto" }
seal-crypto = { git = "https://github.com/MystenLabs/seal", rev = "7ffad8191f37171da6fd1ede4ef3dcb04f5989f9", package = "crypto" }
seal-key-server = { git = "https://github.com/MystenLabs/seal", rev = "7ffad8191f37171da6fd1ede4ef3dcb04f5989f9", package = "key-server" }
regex = { version = "1.5", optional = true }

[features]
default = ["weather"]
weather = []
twitter = ["regex"]
seal-example = ["sui-sdk", "sui-types", "sui-json-rpc-types"]